<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_pause">Pause</string>
    <string name="action_play">Play</string>
    <string name="action_skip_prev">Skip prev</string>
    <string name="action_skip_next">Skip next</string>
    <string name="action_skip_seconds">Skip %1$d seconds</string>
    <string name="action_reverse_seconds">Reverse for %1$d seconds</string>
    <string name="group_playback_controls">Playback controls</string>
    <string name="pick_action">Pick action</string>
    <string name="action_volume_up">Increase volume</string>
    <string name="volume_down">Decrease volume</string>
    <string name="group_volume_controls">Volume controls</string>
    <string name="no_watch_detected">No watch detected</string>
    <string name="connection_instructions">Open Music Center app on the watch to initiate connection</string>
    <string name="playing_controls">Playing controls</string>
    <string name="stopped_controls">Stopped controls</string>
    <string name="actions_menu">Actions menu</string>
    <string name="on_screen_buttons">ON-SCREEN BUTTONS</string>
    <string name="physical_buttons">PHYSICAL BUTTONS</string>
    <string name="no_action">No action</string>
    <string name="gesture_single_press">Single press</string>
    <string name="gesture_double_press">Double press</string>
    <string name="gesture_long_press">Long press</string>
    <string name="start_playback">Start playback</string>
    <string name="uninstalled_app">Uninstalled app</string>

    <string name="play_app">Play %1$s</string>
    <string name="tasker_task">Tasker Task</string>
    <string name="icon_selection_title">Icon selection</string>
    <string name="icon_selection_no_icon_pack">This feature allows you to pick custom icon for your action from
        installed icon pack.\n\nUnfortunately it appears you do not have any icon packs installed.</string>
    <string name="icon_selection_no_storage_permission">This feature allows you to pick custom icon for your action from
        installed icon pack.\n\nSome icon packs require apps to have storage permission. You will need to allow it in order to use this feature.</string>
    <string name="delete">Delete</string>
    <string name="action_text">Action text</string>
    <string name="swap_action">Swap action</string>
    <string name="open_actions_menu">Open actions menu</string>
    <string name="open_playlist_menu">Show current playlist</string>
    <string name="misc_settings">Misc settings</string>

    <string name="category_about">About</string>
    <string name="category_music_screen">Music screen</string>
    <string name="category_action_list">Action List</string>
    <string name="category_automation">Automation</string>
    <string name="installed_version">Installed version</string>
    <string name="donate">Donate</string>
    <string name="donate_description">Buy me a Coke if you really like my app!</string>
    <string name="get_support">Get support</string>
    <string name="get_support_description">Send application logs to the developer for the support</string>
    <string name="licenses">Open source licenses</string>
    <string name="setting_always_show_time">Always show time</string>
    <string name="setting_always_show_time_off_description">Current time will only be displayed in ambient mode</string>
    <string name="setting_always_show_time_on_description">Current time will always be displayed. Top action icon will not be visible (it will be replaced by clock), but action will still function normally.</string>
    <string name="tap_to_force_stop">Tap to force stop</string>
    <string name="error_notification_access">No notification access. Check phone.</string>
    <string name="error_notifications">Error notifications</string>
    <string name="notification_access_notification_title">Music center needs notification access</string>
    <string name="notification_access_notification_title_description">Tap this notification and check Music Center to fix the issue</string>
    <string name="error_service_not_enabled">Service not enabled</string>
    <string name="error_service_not_enabled_description">Notification service is not enabled. You must enable it to get this app to work!</string>
    <string name="action_open_settings">Open Settings</string>
    <string name="required_permission">Required permission</string>
    <string name="setting_pause_on_swipe_exit">Pause playback on swipe exit</string>
    <string name="setting_pause_on_swipe_exit_description">Automatically pause any playback when exiting Music Center on the watch via swipe-left gesture.\n\nExiting via power button is not affected and it will never auto-pause.</string>
    <string name="setting_rotating_crown_off_period">Rotary input screen on delay</string>
    <string name="setting_rotating_crown_off_period_description">Rotating inputs (for example rotating crowns) can be oversensitive on some devices. To prevent accidental volume changes, rotary input will be disabled for <![CDATA[<b>%1$s milliseconds</b>]]> after you turn the screen on.</string>
    <string name="setting_rotating_sensitivity">Rotary input sensitivity</string>
    <string name="setting_rotating_sensitivity_description">Sensitivity for rotary input. Higher number means moving the rotary crown the same way will increase volume for more. Currently set to <![CDATA[<b>%1$s%%</b>]]>.</string>
    <string name="setting_disable_ambient_physical_double_click">Disable physical button double click in ambient</string>
    <string name="setting_disable_ambient_physical_double_click_description">Some watches have buggy buttons where single click of the physical button in ambient mode sometimes gets registered as double click.\n\nIf you experience this, you can enable this option to completely disable double clicks in ambient mode (e.g. clicking twice will just activate single click action). Clicking button twice when watch is active is not affected.</string>
    <string name="setting_haptic_feedback">Haptic feedback</string>
    <string name="setting_haptic_feedback_description">Vibrate the watch when pressing buttons.</string>
    <string name="setting_auto_start">Open Music Center automatically</string>
    <string name="setting_auto_start_description">Automatically open the Music Center on the watch when music playback is started on the phone.</string>
    <string name="setting_auto_start_apps_blacklist">Auto-start apps</string>
    <string name="setting_auto_start_apps_blacklist_description">List of media apps that can auto-start Music Center</string>
    <string name="setting_swipe_up_for_queue">Open queue with swipe up gesture</string>
    <string name="setting_swipe_up_for_queue_description">When enabled, swiping up will display playback queue instead of actions menu. You can still open actions menu by assigning "Open actions menu" action to any button.</string>
    <string name="setting_dim_album_art">Dim the album art</string>
    <string name="setting_dim_album_art_description">When enabled, displayed album art will be dimmed, allowing for better text visibility.</string>

    <string-array name="auto_start_modes_keys">
        <item>OFF</item>
        <item>SHOW_ICON</item>
        <item>OPEN_APP</item>
    </string-array>

    <string-array name="auto_start_modes_descriptions">
        <item>Disabled</item>
        <item>Show music watchface icon (only for Wear 3.0)</item>
        <item>Open Music Center</item>
    </string-array>

    <string name="setting_close_timeout">Close timeout</string>
    <string name="setting_close_timeout_description">Music Center will automatically close itself when there is no music playing for <![CDATA[<b>%1$s seconds</b>]]>. Feature is disabled when timeout is set to 0 seconds. Please not that, to save battery, this option may not be too accurate at times and it might delay the closing for up to a minute.</string>
    <string name="category_notifications">Notification popup</string>
    <string name="setting_enable_notifications">Show notification popup</string>
    <string name="setting_enable_notifications_description">This feature requires another app to manage notifications (Vibration Center for Wear).\n\nWhenever Vibration Center vibrates the watch, Music Center will display popup of the notification text, allowing you to glance at notification quickly without leaving Music Center.</string>
    <string name="setting_notification_timeout">Notification popup timeout</string>
    <string name="setting_notification_timeout_description">Notification popup will automatically close itself after <![CDATA[<b>%1$s seconds</b>]]>. Enter 0 to disable auto-close.</string>
    <string name="app_required">App required</string>
    <string name="vibration_center_required_description">To use this feature, you will need to install another (free) app: Vibration Center for Wear.</string>
    <string name="open_play_store">Open play store</string>
    <string name="error_no_notification_service_support">Sorry, your device does not appear to support notification services</string>
    <string name="setting_always_select_center_action">Always select center action</string>
    <string name="setting_always_select_center_action_description">When enabled, tapping on action list will always select center (highlighted) option, regardless of what option you tapped.</string>
    <string name="change_icon">Change icon</string>
    <string name="please_wait">Please wait</string>

    <string name="error_playlist_not_supported">Not supported by this media app</string>
    <string name="seconds_to_skip">Seconds to skip:</string>
    <string name="seconds_to_reverse">Seconds to reverse:</string>
</resources>
