<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="200dp"
    android:orientation="vertical"
    android:paddingTop="10dp">

    <ImageButton
        android:id="@+id/icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:padding="10dp"
        android:scaleType="fitCenter"
        tools:ignore="ContentDescription"
        tools:src="@drawable/action_play"
        tools:tint="@android:color/black" />

    <EditText
        android:id="@+id/name_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/icon"
        android:layout_toEndOf="@id/icon"
        android:hint="@string/action_text"
        tools:text="@string/action_play" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/action_config_fragment"
        tools:name="com.matejdro.wearmusiccenter.view.actionconfigs.SkipSecondsConfigFragment"
        android:layout_below="@id/name_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp" />

    <Button
        android:id="@+id/swap_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@id/action_config_fragment"
        android:text="@string/swap_action" />

    <Button
        android:id="@+id/delete_button"
        style="?attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/swap_button"
        android:text="@string/delete" />

    <Button
        android:id="@+id/ok_button"
        style="?attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/delete_button"
        android:layout_alignParentEnd="true"
        android:text="@android:string/ok" />

    <Button
        android:id="@+id/cancel_button"
        style="?attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/delete_button"
        android:layout_toStartOf="@id/ok_button"
        android:text="@android:string/cancel" />

</RelativeLayout>

